ch5/kubia2-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata: 
  name: kubia2-nodeport
spec: 
  type: NodePort
  ports: 
  - port: 80
    targetPort: 8080
    nodePort: 30223
  selector: 
    app: kubia
