ch5/kubia2-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia2
spec: 
  tls: 
  - hosts:
    - kubia2.example.com
    secretName: tls-secret
  rules: 
  - host: kubia2.example.com
    http:
      paths:
      - path: /
        backend: 
          serviceName: kubia2-nodeport
          servicePort: 80
